# PFSE-Prototype

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: bench_main.rs  db_benchmarks.rs  fse_benchmarks.rs  init_benchmarks.rs  insertion_benchmarks.rs
benches/real/: bench_main.rs  init_benchmarks.rs  insert_benchmarks.rs  query_benchmarks.rs
eval/: .gitignore  Cargo.toml  attack_config.toml  eval.py  perf_config.toml  sample_config.toml
eval/src/: attack.rs  config.rs  execute.rs  main.rs  perf.rs
fig/: fig.ipynb
src/: attack.rs  context.rs  db.rs  fse.rs  lib.rs  util.rs
src/scheme/: lpfse.rs  mod.rs  naive.rs  native.rs  pfse.rs  wre.rs
tests/: attack_tests.rs  scheme_tests.rs
