[package]
name = "fse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
pathfinding = "4.2.0"
rand = "0.8.5"
rand_core = { version = "0.6.0", features = ["std"] }

[lib]
doctest = false

[features]
attack = []
