[package]
name = "fse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
base64 = "0.21.0"
criterion = "0.4.0"
csv = "1.1.6"
mongodb = { version = "2.3.1", features = ["sync"], default-features = false }
num-traits = "0.2.15"
pathfinding = "4.2.0"
rand = "0.8.5"
rand_core = { version = "0.6.0", features = ["std"] }
rand_distr = "0.4.3"
serde = { version = "1.0.152", features = ["derive"] }

[lib]
doctest = false

[features]
default = ["attack"]
attack = []

[[bench]]
name = "fse_benchmarks"
harness = false
path = "./benches/bench_main.rs"
