[package]
name = "eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.10.0"
fse = { path = ".." }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"
